[tool.poetry]
name = "demo-face-gan"
version = "0.1.0"
description = "Demonstrates creating faces with a GAN"
authors = ["Adrien Treuille <adrien.g.treuille@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
streamlit = "^1.30.0"  # Latest stable version
tensorflow = "^2.10.0"  # Updated to TensorFlow 2.x
scikit-learn = "^1.3.0"  # Latest stable version

[tool.poetry.dev-dependencies]
black = "*"  # Pretty formatting of Python code
pynvim = "*" # Allows nvim users to use black formatting

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "primary"
